Material menu length problem #49601

Closed
opened 2016-10-07 18:39:28 +02:00 by Alma Talp · 32 comments

I use long material and object names in Blender with a reason (Win7 64 bit) on Blender 2.74.
Yesterday a realized that 2.78 fails to display long material names (see screenshot), instead of 30 it displays only 26 characters what makes my former naming rules unusable.
Ideal working method would be to extend the menu length to actual material name length, but displaying minimum 40 characters.

Thanks

blender error.png

I use long material and object names in Blender with a reason (Win7 64 bit) on Blender 2.74. Yesterday a realized that 2.78 fails to display long material names (see screenshot), instead of 30 it displays only 26 characters what makes my former naming rules unusable. Ideal working method would be to extend the menu length to actual material name length, but displaying minimum 40 characters. Thanks ![blender error.png](https://archive.blender.org/developer/F375153/blender_error.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AlmaTalp

Added subscriber: @AlmaTalp
Bastien Montagne was assigned by Aaron Carlisle 2016-10-07 20:12:26 +02:00

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Thanks for the report, but there is no bug here. We cannot afford too long stuff in UI, and this change was made because in the vast majority of cases, when you cannot display the whole name, it’s much, much more useful to see its start end ends, than only its starting part (canonical example here are names ending with numbers).

Thanks for the report, but there is no bug here. We cannot afford too long stuff in UI, and this change was made because in the vast majority of cases, when you cannot display the whole name, it’s much, much more useful to see its start end ends, than only its starting part (canonical example here are names ending with numbers).
Author

Thanks, but I think it is a wrong direction; I completely agree with the fact that seeing end is more important but I cannot see any valid reason for shortening display from 30 to 26 as the GUI is completely configurable (so logical approach would that these 'pop-up' menus would follow the size of the GUI elements.

Please, do not ignore it; at least change it back to the former length.

Thanks, but I think it is a wrong direction; I completely agree with the fact that seeing end is more important but I cannot see _any valid_ reason for shortening display from 30 to 26 as the GUI is completely configurable (so logical approach would that these 'pop-up' menus would follow the size of the GUI elements. Please, do not ignore it; at least change it back to the former length.
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
  • The length remains the same, you lose some letters because of the '...'
  • Remaining is a feature request, not a bug report, and is not accepted on this tracker. General design etc. discussion is not done here.
  • Please do not reopen tasks like that, tracker management is dev work.
* The length remains the same, you lose some letters because of the '...' * Remaining is a feature request, not a bug report, and is not accepted on this tracker. General design etc. discussion is not done here. * Please do not reopen tasks like that, tracker management is dev work.
Bastien Montagne removed their assignment 2016-10-08 11:13:12 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

And I do not see why this was assigned to me in the first place, btw…

And I do not see why this was assigned to me in the first place, btw…
Author

'The length remains the same, you lose some letters because of the '...''

Yep, that is not what is happening, see the screenshots please.

'Remaining is a feature request, not a bug report, and is not accepted on this tracker. General design etc. discussion is not done here.'

I don't necessarily ask for a new request, I noted the change as a behaviour like a bug.
Where and who will decide about it; how can I contect that person?

'Please do not reopen tasks like that, tracker management is dev work.

Sorry for that.

*'The length remains the same, you lose some letters because of the '...''* Yep, that is not what is happening, see the screenshots please. *'Remaining is a feature request, not a bug report, and is not accepted on this tracker. General design etc. discussion is not done here.'* I don't necessarily ask for a new request, I noted the change as a behaviour like a bug. Where and who will decide about it; how can I contect that person? *'Please do not reopen tasks like that, tracker management is dev work.* Sorry for that.

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

That kind of discussion should ideally happen on ML (bf-committers@blender.org). @JulianEisel might also be interested here?

That kind of discussion should ideally happen on ML (bf-committers@blender.org). @JulianEisel might also be interested here?
Author

Thank you, Bastien!

Thank you, Bastien!
Author

I tried to write formerly on ML but my emails never appeared.

I tried to write formerly on ML but my emails never appeared.

Uh, think you need to register first (https://lists.blender.org/mailman/listinfo/bf-committers), otherwise your mails have to be manually approved, which can take some time, especially on week-ends ;)

Uh, think you need to register first (https://lists.blender.org/mailman/listinfo/bf-committers), otherwise your mails have to be manually approved, which can take some time, especially on week-ends ;)
Author

Thank you, I was subscribed, but now I did it again. Hopefully it will work.

Thank you, I was subscribed, but now I did it again. Hopefully it will work.
Author

May I have another question? I have an addon to replace one of the actual functions in a far better way related to Image Editor. Who is the contact person for that? Thanks.

May I have another question? I have an addon to replace one of the actual functions in a far better way related to Image Editor. Who is the contact person for that? Thanks.

Please create a diff

Please [create a diff](https://developer.blender.org/differential/diff/create/)
Author

Thanks!

Thanks!
Author

Hello Bastien,

I sent the material name length problem to the bf committter list, but seems not to get any response. Is there a way to investigate who made the changes in the material menu? I would like to contact him directly.

Thanks

Alma

Hello Bastien, I sent the material name length problem to the bf committter list, but seems not to get any response. Is there a way to investigate who made the changes in the material menu? I would like to contact him directly. Thanks Alma

Hey Alma,
Think only realistic way is to build blender and then bisect until you find the commit… I’ll try to do that.

Hey Alma, Think only realistic way is to build blender and then bisect until you find the commit… I’ll try to do that.
Author

Hello Bastien, thanks.
Let me to be honest I don't even know what you are talking about. I'm just guessing (compiling on my machine a new Blender executable?):)

Thanks for trying to find it! Could I send you a Paypal donation for a beer as a thank you?

Hello Bastien, thanks. Let me to be honest I don't even know what you are talking about. I'm just guessing (compiling on my machine a new Blender executable?):) Thanks for trying to find it! Could I send you a Paypal donation for a beer as a thank you?
Bastien Montagne self-assigned this 2016-10-14 10:15:43 +02:00

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Hrmmm… bisect shows it comes from 69b66d549b

Which makes it an unwanted regression since 2.77 :/

Hrmmm… bisect shows it comes from 69b66d549b Which makes it an unwanted regression since 2.77 :/

This issue was referenced by 49c2dbc5db

This issue was referenced by 49c2dbc5dbaefd3a2ff950dbb33e6190885d347e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Bah, stupid regression really… thanks for pushing on this one anyway! ;)

Bah, stupid regression really… thanks for pushing on this one anyway! ;)
Author

Thank you, Bastien! As the new '...' function removes 3 characters from the current length, will it be able to add some additional characters (maybe the way I described it in the first post)?

Thanks

Thank you, Bastien! As the new '...' function removes 3 characters from the current length, will it be able to add some additional characters (maybe the way I described it in the first post)? Thanks

Well… not that easily, we'd have to check all materials' length before setting searchmenu's width, would rather avoid that, so afraid we are stuck to fixed width for now.

Well… not that easily, we'd have to check all materials' length before setting searchmenu's width, would rather avoid that, so afraid we are stuck to fixed width for now.
Author

I see, thanks.

Then is it possible to rise the width to 40 characters? Original was 30, with the new '...' added + the regression it is 23; to get the same function it should be 33 characters with the fix it will get, but 40 would be better for huge material library for teamwork.

Thanks.

I see, thanks. Then is it possible to rise the width to 40 characters? Original was 30, with the new '...' added + the regression it is 23; to get the same function it should be 33 characters with the fix it will get, but 40 would be better for huge material library for teamwork. Thanks.
Author

Hello,

did anything happened to resolve this issue? I cannot see any changes, 2.79 still acts the same way, making me to stick with old Blender versions.

Thanks

Hello, did anything happened to resolve this issue? I cannot see any changes, 2.79 still acts the same way, making me to stick with old Blender versions. Thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49601
No description provided.