source/blender/editors/interface/interface_regions.c
@@ -829,7 +829,7 @@ int UI_searchbox_size_y(void)
 
 int UI_searchbox_size_x(void)
 {
-	return 10 * UI_UNIT_X;
+	return 12 * UI_UNIT_X;
 }
 
 int UI_search_items_find_index(uiSearchItems *items, const char *name)
